--- a/package.json
+++ b/package.json
@@ -5,30 +5,25 @@
     "homepage": "https://www.direct-netware.de/redirect?djt;object_tree_lookup",
     "version": "1.0.0",
     "private": true,
-
     "repository": {
         "type": "git",
         "url": "https://github.com/dNG-git/djt_object_tree_lookup.git"
     },
-
     "main": "./lib/cjs/object-tree-lookup.js",
     "module": "./lib/object-tree-lookup.js",
     "typings": "./lib/object-tree-lookup.d.ts",
-
     "scripts": {
         "install-clean": "npm install --no-save",
-        "update": "npm update",
+        "update-clean": "npm update --no-save",
         "build": "npm run build-lib",
         "build-lib": "npm run build-lib:es6 && npm run build-lib:cjs",
         "build-lib:es6": "./node_modules/.bin/tsc",
         "build-lib:cjs": "./node_modules/.bin/tsc -p tsconfig.cjs.json",
         "prepare": "npm run build-lib"
     },
-
-    "dependencies": { },
-
+    "dependencies": {},
     "devDependencies": {
-        "tslint": "^5.9.1",
-        "typescript": "^2.8.1"
+        "tslint": "^5.10.0",
+        "typescript": "^2.9.2"
     }
 }
