--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "license": "MPL-2.0",
     "description": "'djt-object-tree-lookup' provides easier access to nested JSON/object attributes.",
     "homepage": "https://www.direct-netware.de/redirect?djt;object_tree_lookup",
-    "version": "1.0.2",
+    "version": "1.1.0",
     "private": true,
     "repository": {
         "type": "git",
@@ -23,7 +23,10 @@
     },
     "dependencies": {},
     "devDependencies": {
-        "tslint": "^5.11.0",
-        "typescript": "^3.1.4"
+        "eslint": "^7.3.0",
+        "eslint-plugin-header": "^3.0.0",
+        "typescript": "^3.9.5",
+        "@typescript-eslint/parser": "^3.3.0",
+        "@typescript-eslint/eslint-plugin": "^3.3.0"
     }
 }
