--- a/tsconfig.default.json
+++ b/tsconfig.default.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es2017",
         "lib": [ "es2017" ],
-        "module": "es2015",
+        "module": "esnext",
         "moduleResolution": "node",
         "outDir": "./lib",
 
