Add Github workflow for testing
(Enhancement)

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "build-lib": "npm run build-lib:es6 && npm run build-lib:cjs",
         "build-lib:es6": "./node_modules/.bin/tsc",
         "build-lib:cjs": "./node_modules/.bin/tsc -p tsconfig.cjs.json",
-        "prepare": "npm run build-lib"
+        "prepare": "npm run build-lib",
+        "test": ""
     },
     "dependencies": {},
     "devDependencies": {
