Update "package.json" for package registry publication
(Enhancement)

--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-    "name": "djt-object-tree-lookup",
+    "name": "@dng-git/djt-object-tree-lookup",
     "license": "MPL-2.0",
     "description": "'djt-object-tree-lookup' provides easier access to nested JSON/object attributes.",
     "homepage": "https://www.direct-netware.de/redirect?djt;object_tree_lookup",
     "version": "1.2.0",
-    "private": true,
     "repository": {
         "type": "git",
         "url": "https://github.com/dNG-git/djt_object_tree_lookup.git"
+    },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com"
     },
     "main": "./lib/cjs/object-tree-lookup.js",
     "module": "./lib/object-tree-lookup.js",
